...
          <View style={styles.actionTextWrap}>
            <BlueText style={styles.actionTitle}>{loc.wallets.atm_create_wallet}</BlueText>
            <BlueText style={[styles.actionCopy, stylesHook.secondaryCopy]}>{loc.wallets.atm_create_wallet_explain}</BlueText>
          </View>
        </View>
        {renderActionButton({
          testID: 'CreateATMWalletButton',
          title: loc.wallets.atm_create_wallet,
          onPress: handleCreateWallet,
          variant: 'primary',
          disabled: isCreating,
          loading: isCreating,
        })}
...
