...
      </SafeAreaScrollView>

      {isAtmMode && (
        <Pressable
          accessibilityRole="button"
          accessibilityLabel={loc._.close}
          testID="NavigationCloseButton"
          onPress={() => goBack()}
          hitSlop={10}
          style={[styles.atmCloseButton, stylesHook.atmCloseButton]}
        >
          <Icon name="close" type="ionicon" size={22} color={AMERICA_BLUE} />
        </Pressable>
...
